# VACathon

./: main.py  pyproject.toml
checkpoints/: best_model.pt
src/: ast_utils.py  data.py  loaders.py  model.py  train.py
viz/: train_g0.dot
