[project]
name = "vacathon"
version = "0.1.0"
description = "Code vulnerability detector using GNN"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "attrs==25.3.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "datasets==4.1.1",
    "dill==0.4.0",
    "filelock==3.19.1",
    "frozenlist==1.7.0",
    "fsspec==2025.9.0",
    "graphviz==0.21",
    "hf-xet==1.1.10",
    "huggingface-hub==0.35.3",
    "idna==3.10",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "mpmath==1.3.0",
    "multidict==6.6.4",
    "multiprocess==0.70.16",
    "networkx==3.5",
    "numpy==2.3.3",
    "packaging==25.0",
    "pandas==2.3.3",
    "propcache==0.3.2",
    "psutil==7.1.0",
    "pyarrow==21.0.0",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sympy==1.14.0",
    "torch==2.8.0",
    "torch-geometric==2.6.1",
    "tqdm==4.67.1",
    "tree-sitter==0.20.4",
    "tree-sitter-languages==1.10.2",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "xxhash==3.5.0",
    "yarl==1.20.1",
]
